feat: add more admin endpoints
